--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 /node_modules
+/node_modules/node/bin/node
 /.pnp
 .pnp.js
 .env
@@ -17,7 +18,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
-
+/backend/node_modules
 # firebase
 /serviceAccountKey.json
 
