--- a/backend/package.json
+++ b/backend/package.json
@@ -14,12 +14,16 @@
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "bson": "^5.0.0",
+    "compression": "^1.7.4",
     "connect-mongo": "^4.6.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "firebase": "^9.17.1",
     "firebase-admin": "^11.5.0",
+    "helmet": "^6.0.1",
+    "lodash": "^4.17.21",
     "mongodb": "^4.13.0",
     "mongoose": "^6.9.0",
     "node": "^18.13.0",
