--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,7 @@ node_modules/node/bin/node
 /backend/node_modules
 # firebase
 /serviceAccountKey.json
-
+/firebase
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
