--- a/backend/package.json
+++ b/backend/package.json
@@ -19,10 +19,15 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-flash": "^0.0.2",
+    "express-jwt": "^5.3.1",
     "express-session": "^1.17.3",
-    "firebase": "^9.17.1",
+    "firebase": "^7.24.0",
     "firebase-admin": "^11.5.0",
+    "firebase-functions": "^4.2.1",
+    "firebase-tools": "^11.25.2",
     "helmet": "^6.0.1",
+    "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "mongodb": "^4.13.0",
     "mongoose": "^6.9.0",
@@ -31,6 +36,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/express-jwt": "^7.4.2",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0"
