--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "babel-plugin-macros": "^3.1.0",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.2.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "firebase": "^9.17.2",
-    "firebase-admin": "^11.5.0",
-    "firebase-auth": "^0.1.2",
+    "firebase": "^9.18.0",
+    "jose": "^4.13.1",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^4.13.0",
     "mongoose": "^6.8.3",
@@ -38,7 +38,8 @@
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
-    "realm-web": "^2.0.0",
+    "react-validation": "^3.0.7",
+    "validator": "^13.9.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
